--- a/ConfectioneryEnterprise.Web/Views/Shared/_Layout.cshtml
+++ b/ConfectioneryEnterprise.Web/Views/Shared/_Layout.cshtml
@@ -1,42 +1,62 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="zxx" class="no-js">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    <!-- Mobile Specific Meta -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Favicon-->
+    <link rel="shortcut icon" href="img/fav.png">
+    <!-- Author Meta -->
+    <meta name="author" content="colorlib">
+    <!-- Meta Description -->
+    <meta name="description" content="">
+    <!-- Meta Keyword -->
+    <meta name="keywords" content="">
+    <!-- meta character set -->
+    <meta charset="UTF-8">
+    <!-- Site Title -->
+    <title>Bakery</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
+    <!--
+    CSS
+    ============================================= -->
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/main.css">
 </head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+<body>	
+<header id="header" id="home">
+    <div class="header-top">
         <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-            </div>
+            <div class="row align-items-center">
+                <div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
+                </div>
+            </div>			  					
         </div>
     </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+    <div class="container main-menu">
+        <div class="row align-items-center justify-content-between d-flex">
+            <a href="index.html"><img src="/img/logo.png" alt="" title="" /></a>		
+            <nav id="nav-menu-container">
+                <ul class="nav-menu">
+                    <li class="menu-active"><a href="index.html">Home</a></li>
+                    <!--<li><a href="menu.html">Menu</a></li>-->
+                </ul>
+            </nav><!-- #nav-menu-container -->		
+        </div>
     </div>
+</header><!-- #header -->
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+@RenderBody()
+
+
+<script src="/js/jquery-2.2.4.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>			
+<script src="/js/easing.min.js"></script>			
+<script src="/js/superfish.min.js"></script>	
+<script src="/js/jquery.ajaxchimp.min.js"></script>
+<script src="/js/jquery.magnific-popup.min.js"></script>	
+<script src="/js/main.js"></script>	
+
+
 </body>
 </html>
