--- a/ConfectioneryEnterprise.Web/Views/Home/Index.cshtml
+++ b/ConfectioneryEnterprise.Web/Views/Home/Index.cshtml
@@ -2,30 +2,47 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<!-- start banner Area -->
+<section class="banner-area relative" id="home">
+    <div class="overlay overlay-bg"></div>
+    <div class="container">
+        <div class="row fullscreen d-flex justify-content-center align-items-center">
+            <div class="banner-content col-lg-10 col-md-12 justify-content-center">
+                <h6 class="text-uppercase">Whenever we bake, bake with our heart</h6>
+                <h1>
+                    Love with baking items			
+                </h1>
+                <a href="#login" class="primary-btn squire text-uppercase mt-10">Login - to go personal account</a>
+            </div>											
+        </div>
+    </div>
+</section>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+
+<!-- Start home-about Area -->
+<section class="home-about-area section-gap">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-9">
+                <h6 class="text-uppercase">Brand new app to blow your mind</h6>
+                <h1>
+                    We’ve baked every item
+                    from the core of our heart to serve you
+                </h1>
+
+                <form action="#" id="login">
+                    <div class="mt-2">
+                        <input type="text" name="first_name" placeholder="Login" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Login'" required class="single-input">
+                    </div>
+                    <div class="mt-10">
+                        <input type="text" name="last_name" placeholder="Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'" required class="single-input">
+                    </div>
+                </form>	
+
+                <a class="primary-btn squire mx-auto mt-20" href="#">Get Started Now</a>						
+            </div>
+        </div>
+    </div>	
+    <img class="about-img" src="/img/about-img.png" alt="">
+</section>
+<!-- End home-about Area -->
