--- a/ConfectioneryEnterprise.Web/Views/Home/Personal.cshtml
+++ b/ConfectioneryEnterprise.Web/Views/Home/Personal.cshtml
@@ -42,7 +42,7 @@
             <div class="col-lg-4 sidebar-widgets">
                 <div class="widget-wrap">
                     <div class="single-sidebar-widget user-info-widget">
-                        <img src="https://avatars1.githubusercontent.com/u/29438488?s=400&v=4" width="250" height="250" alt="">
+                        <img src="" width="250" height="250" alt="">
                         <a href="#"><h4>Charlie Barber</h4></a>
                         <p>
                             Senior blog writer
