--- a/ConfectioneryEnterprise.Web/Views/Home/Personal.cshtml
+++ b/ConfectioneryEnterprise.Web/Views/Home/Personal.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model ConfectioneryEnterprise.Domain.Client
 @{
     ViewBag.Title = "Personal";
 }
@@ -9,7 +9,7 @@
         <div class="row d-flex align-items-center justify-content-center">
             <div class="about-content col-lg-12">
                 <h1 class="text-white">
-                    Admin or client
+                    Personal page @Model.FirstName
                 </h1>
             </div>
         </div>
@@ -24,17 +24,11 @@
                 <div class="single-post row">
 
                     <div class="col-lg-3  col-md-3 meta-details">
-                        <div class="user-details row">
-                            <p class="user-name col-lg-12 col-md-12 col-6"><a href="#">Mark wiens</a> <span class="lnr lnr-user"></span></p>
-                            <p class="date col-lg-12 col-md-12 col-6"><a href="#">12 Dec, 2017</a> <span class="lnr lnr-calendar-full"></span></p>
-                            <p class="view col-lg-12 col-md-12 col-6"><a href="#">1.2M Views</a> <span class="lnr lnr-eye"></span></p>
-                            <p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span class="lnr lnr-bubble"></span></p>
-                        </div>
+                        @Html.ActionLink("Menu", "Menu")
                     </div>
                     <div class="col-lg-9 col-md-9">
-                        <a class="posts-title" href="#"><h3>Astronomy Binoculars A Great Alternative</h3></a>
+                        <a class="posts-title" href="#"><h3>Login: @Model.Login</h3></a>
                         <p class="excert">
-                            MCSE boot camps have its supporters and its detractors. Some people do not understand why you should have to spend money on boot camp when you can get the MCSE study materials yourself at a fraction.
                         </p>
                     </div>
                 </div>
@@ -43,9 +37,9 @@
                 <div class="widget-wrap">
                     <div class="single-sidebar-widget user-info-widget">
                         <img src="" width="250" height="250" alt="">
-                        <a href="#"><h4>Charlie Barber</h4></a>
+                        <a href="#"><h4>@Model.FirstName @Model.LastName</h4></a>
                         <p>
-                            Senior blog writer
+                            @Model.Phone
                         </p>
                         <ul class="social-links">
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -54,8 +48,6 @@
                             <li><a href="#"><i class="fa fa-behance"></i></a></li>
                         </ul>
                         <p>
-                            Boot camps have its supporters andit sdetractors. Some people do not understand why you should have to spend money on boot camp when you can get. Boot camps have itssuppor ters andits detractors.
-                        </p>
                     </div>
                 </div>
             </div>
