--- a/ConfectioneryEnterprise.Web/Views/Shared/_Layout.cshtml
+++ b/ConfectioneryEnterprise.Web/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
             <a href="index.html"><img src="/img/logo.png" alt="" title="" /></a>		
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
-                    <li class="menu-active"><a href="index.html">Home</a></li>
+                    @*<li class="menu-active"><a href="/">Home</a></li>*@
                     <!--<li><a href="menu.html">Menu</a></li>-->
                 </ul>
             </nav><!-- #nav-menu-container -->		
